--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="row h-100">
                 <div class="col-12 d-flex">
                     <div class="m-auto">
-                        <button class="btn btn-primary" @click="blockOnClick()">ADD BOX</button>
+                        <button class="btn btn-primary">ADD BOX</button>
                         <div id="target d-flex">
                         </div>
                     </div>
